Minor linter warnings