@@ -18,10 +18,7 @@ package net.objecthunter.exp4j.tokenizer;
 import static net.objecthunter.exp4j.TestUtil.*;
 import static org.junit.Assert.*;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
+import java.util.*;
 
 import net.objecthunter.exp4j.function.Function;
 import net.objecthunter.exp4j.operator.Operator;
@@ -31,25 +28,25 @@ import org.junit.Test;
 public class TokenizerTest {
 
     @Test
-    public void testTokenization1() throws Exception {
+    public void testTokenization1() {
         final Tokenizer tokenizer = new Tokenizer("1.222331",null, null, null, true);
         assertNumberToken(tokenizer.nextToken(), 1.222331d);
     }
 
     @Test
-    public void testTokenization2() throws Exception {
+    public void testTokenization2() {
         final Tokenizer tokenizer = new Tokenizer(".222331",null, null, null, true);
         assertNumberToken(tokenizer.nextToken(), .222331d);
     }
 
     @Test
-    public void testTokenization3() throws Exception {
+    public void testTokenization3() {
         final Tokenizer tokenizer = new Tokenizer("3e2",null, null, null, true);
         assertNumberToken(tokenizer.nextToken(), 300d);
     }
 
     @Test
-    public void testTokenization4() throws Exception {
+    public void testTokenization4() {
         final Tokenizer tokenizer = new Tokenizer("3+1",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -65,7 +62,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization5() throws Exception {
+    public void testTokenization5() {
         final Tokenizer tokenizer = new Tokenizer("+3",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -78,7 +75,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization6() throws Exception {
+    public void testTokenization6() {
         final Tokenizer tokenizer = new Tokenizer("-3",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -91,7 +88,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization7() throws Exception {
+    public void testTokenization7() {
         final Tokenizer tokenizer = new Tokenizer("---++-3",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -119,7 +116,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization8() throws Exception {
+    public void testTokenization8() {
         final Tokenizer tokenizer = new Tokenizer("---++-3.004",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -147,7 +144,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization9() throws Exception {
+    public void testTokenization9() {
         final Tokenizer tokenizer = new Tokenizer("3+-1",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -166,7 +163,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization10() throws Exception {
+    public void testTokenization10() {
         final Tokenizer tokenizer = new Tokenizer("3+-1-.32++2",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -200,7 +197,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization11() throws Exception {
+    public void testTokenization11() {
         final Tokenizer tokenizer = new Tokenizer("2+",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -213,7 +210,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization12() throws Exception {
+    public void testTokenization12() {
         final Tokenizer tokenizer = new Tokenizer("log(1)",null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
@@ -232,8 +229,8 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization13() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("x",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization13() {
+        final Tokenizer tokenizer = new Tokenizer("x",null, null, new HashSet<>(List.of("x")), true);
 
         assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
@@ -242,8 +239,8 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization14() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2*x-log(3)",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization14() {
+        final Tokenizer tokenizer = new Tokenizer("2*x-log(3)",null, null, new HashSet<>(List.of("x")), true);
 
         assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
@@ -273,8 +270,8 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization15() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2*xlog+log(3)",null, null, new HashSet<>(Arrays.asList("xlog")), true);
+    public void testTokenization15() {
+        final Tokenizer tokenizer = new Tokenizer("2*xlog+log(3)",null, null, new HashSet<>(List.of("xlog")), true);
 
         assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
@@ -304,8 +301,8 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization16() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2*x+-log(3)",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization16() {
+        final Tokenizer tokenizer = new Tokenizer("2*x+-log(3)",null, null, new HashSet<>(List.of("x")), true);
 
         assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
@@ -338,8 +335,8 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization17() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2 * x + -log(3)",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization17() {
+        final Tokenizer tokenizer = new Tokenizer("2 * x + -log(3)",null, null, new HashSet<>(List.of("x")), true);
 
         assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
@@ -372,7 +369,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization18() throws Exception {
+    public void testTokenization18() {
         final Function log2 = new Function("log2") {
 
             @Override
@@ -401,7 +398,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization19() throws Exception {
+    public void testTokenization19() {
         Function avg = new Function("avg", 2) {
 
             @Override
@@ -439,7 +436,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization20() throws Exception {
+    public void testTokenization20() {
         Operator factorial = new Operator("!", 1, true, Operator.PRECEDENCE_POWER + 1) {
             @Override
             public double apply(double... args) {
@@ -461,7 +458,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization21() throws Exception {
+    public void testTokenization21() {
         final Tokenizer tokenizer = new Tokenizer(
                 "log(x) - y * (sqrt(x^cos(y)))", null, null,
                 new HashSet<>(Arrays.asList("x", "y")), true);
@@ -524,7 +521,7 @@ public class TokenizerTest {
     }
 
     @Test
-    public void testTokenization22() throws Exception {
+    public void testTokenization22() {
         final Tokenizer tokenizer = new Tokenizer("--2 * (-14)", null, null, null, true);
 
         assertTrue(tokenizer.hasNext());
